--- a/src/sass/blocks/works.scss
+++ b/src/sass/blocks/works.scss
@@ -20,6 +20,7 @@
     }
 
     .swiper-pagination {
+        z-index: 0;
         bottom: -40px;
     }
 
